--- a/Webradio.csproj
+++ b/Webradio.csproj
@@ -53,53 +53,55 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Bass.Net, Version=2.4.12.5, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL">
-      <HintPath>C:\Users\Knecht\Downloads\MediaPortal-2-master\MediaPortal\Packages\BASS.NET.2.4.12.5\lib\net46\Bass.Net.dll</HintPath>
+      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Packages\BASS.NET.2.4.12.5\lib\net46\Bass.Net.dll</HintPath>
     </Reference>
     <Reference Include="BassLibraries">
-      <HintPath>C:\Users\Knecht\Downloads\MediaPortal-2-WIP_2.2\MediaPortal-2-WIP_2.2\MediaPortal\Source\Extensions\BassLibraries\bin\x86\Debug\BassLibraries.dll</HintPath>
+      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Extensions\BassLibraries\bin\x86\Debug\BassLibraries.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BassPlayer">
-      <HintPath>C:\Users\Knecht\Downloads\MediaPortal-2-WIP_2.2\MediaPortal-2-WIP_2.2\MediaPortal\Source\UI\Players\BassPlayer\bin\x86\Debug\BassPlayer.dll</HintPath>
+      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\Players\BassPlayer\bin\x86\Debug\BassPlayer.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="CoverArtArchive, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\CoverArtArchive.dll</HintPath>
     </Reference>
+    <Reference Include="FanArtService.Client">
+      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\FanArt\FanArtService.Client\bin\x86\Debug\FanArtService.Client.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="FanartTv, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\FanartTv.dll</HintPath>
     </Reference>
     <Reference Include="Media">
-      <HintPath>C:\Users\Knecht\Downloads\MediaPortal-2-WIP_2.2\MediaPortal-2-WIP_2.2\MediaPortal\Source\UI\UiComponents\Media\bin\x86\Debug\Media.dll</HintPath>
+      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\UiComponents\Media\bin\x86\Debug\Media.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MediaPortal.Common">
-      <HintPath>C:\Users\Knecht\Downloads\MediaPortal-2-WIP_2.2\MediaPortal-2-WIP_2.2\MediaPortal\Source\Core\MediaPortal.Common\bin\x86\Debug\MediaPortal.Common.dll</HintPath>
+      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Core\MediaPortal.Common\bin\x86\Debug\MediaPortal.Common.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MediaPortal.UI">
-      <HintPath>C:\Users\Knecht\Downloads\MediaPortal-2-WIP_2.2\MediaPortal-2-WIP_2.2\MediaPortal\Source\Core\MediaPortal.UI\bin\x86\Debug\MediaPortal.UI.dll</HintPath>
+      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Core\MediaPortal.UI\bin\x86\Debug\MediaPortal.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MediaPortal.Utilities">
-      <HintPath>C:\Users\Knecht\Downloads\MediaPortal-2-WIP_2.2\MediaPortal-2-WIP_2.2\MediaPortal\Source\Core\MediaPortal.Utilities\bin\x86\Debug\MediaPortal.Utilities.dll</HintPath>
+      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Core\MediaPortal.Utilities\bin\x86\Debug\MediaPortal.Utilities.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MusicBrainz, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\MusicBrainz.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>C:\Users\Knecht\Downloads\MediaPortal-2-WIP_2.2\MediaPortal-2-WIP_2.2\MediaPortal\Packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="ParkSquare.Gracenote, Version=1.6.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>C:\Users\Knecht\Downloads\MediaPortal-2-WIP_2.2\MediaPortal-2-WIP_2.2\MediaPortal\Packages\ParkSquare.Gracenote.1.6.4\lib\net40\ParkSquare.Gracenote.dll</HintPath>
+    <Reference Include="ParkSquare.Gracenote, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\ParkSquare.Gracenote.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="SkinEngine">
-      <HintPath>C:\Users\Knecht\Downloads\MediaPortal-2-WIP_2.2\MediaPortal-2-WIP_2.2\MediaPortal\Source\UI\SkinEngine\bin\x86\Debug\SkinEngine.dll</HintPath>
+      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\SkinEngine\bin\x86\Debug\SkinEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -116,6 +118,7 @@
   <ItemGroup>
     <Compile Include="Dialogues\WebradioDlgLoadUpdate.cs" />
     <Compile Include="Dialogues\WebradioDlgSettingsStreamlistUpdate.cs" />
+    <Compile Include="Dialogues\WebradioDlgShowMessage.cs" />
     <Compile Include="Helper\FilterSetupInfo.cs" />
     <Compile Include="Helper\StreamListeners.cs" />
     <Compile Include="Helper\MyStreams.cs" />
@@ -146,6 +149,7 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Data\StreamList.xml" />
     <Content Include="Language\strings_de.xml" />
     <Content Include="Language\strings_en.xml">
       <SubType>Designer</SubType>
@@ -160,7 +164,6 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Readme.txt" />
     <Content Include="Skin\default\images\2DED75C0-5EAE-4E69-9913-6B50A9AB2956.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -324,10 +327,9 @@
     <Folder Include="Skin\WMCSkin\workflow\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="C:\Users\Knecht\Downloads\MediaPortal-2-WIP_2.2\MediaPortal-2-WIP_2.2\MediaPortal\Source\UI\FanArt\FanArtService.Client\FanArtService.Client.csproj">
-      <Project>{cda7272f-e218-42a0-a53a-2d44e4015ff7}</Project>
-      <Name>FanArtService.Client</Name>
-    </ProjectReference>
+    <Content Include="Skin\default\screens\webradio_dialogShowMessage.xaml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
