--- a/Webradio.csproj
+++ b/Webradio.csproj
@@ -56,11 +56,11 @@
       <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Packages\BASS.NET.2.4.12.5\lib\net46\Bass.Net.dll</HintPath>
     </Reference>
     <Reference Include="BassLibraries">
-      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Extensions\BassLibraries\bin\x86\Debug\BassLibraries.dll</HintPath>
+      <HintPath>C:\Users\dierk\Downloads\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Extensions\BassLibraries\bin\x86\Debug\BassLibraries.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BassPlayer">
-      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\Players\BassPlayer\bin\x86\Debug\BassPlayer.dll</HintPath>
+      <HintPath>C:\Users\dierk\Downloads\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\Players\BassPlayer\bin\x86\Debug\BassPlayer.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="CoverArtArchive, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -68,7 +68,7 @@
       <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\CoverArtArchive.dll</HintPath>
     </Reference>
     <Reference Include="FanArtService.Client">
-      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\FanArt\FanArtService.Client\bin\x86\Debug\FanArtService.Client.dll</HintPath>
+      <HintPath>C:\Users\dierk\Downloads\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\FanArt\FanArtService.Client\bin\x86\Debug\FanArtService.Client.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="FanartTv, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
@@ -76,32 +76,34 @@
       <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\FanartTv.dll</HintPath>
     </Reference>
     <Reference Include="Media">
-      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\UiComponents\Media\bin\x86\Debug\Media.dll</HintPath>
+      <HintPath>C:\Users\dierk\Downloads\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\UiComponents\Media\bin\x86\Debug\Media.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MediaPortal.Common">
-      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Core\MediaPortal.Common\bin\x86\Debug\MediaPortal.Common.dll</HintPath>
+      <HintPath>C:\Users\dierk\Downloads\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Core\MediaPortal.Common\bin\x86\Debug\MediaPortal.Common.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MediaPortal.UI">
-      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Core\MediaPortal.UI\bin\x86\Debug\MediaPortal.UI.dll</HintPath>
+      <HintPath>C:\Users\dierk\Downloads\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Core\MediaPortal.UI\bin\x86\Debug\MediaPortal.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MediaPortal.Utilities">
-      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Core\MediaPortal.Utilities\bin\x86\Debug\MediaPortal.Utilities.dll</HintPath>
+      <HintPath>C:\Users\dierk\Downloads\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\Core\MediaPortal.Utilities\bin\x86\Debug\MediaPortal.Utilities.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MusicBrainz, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\MusicBrainz.dll</HintPath>
     </Reference>
-    <Reference Include="ParkSquare.Gracenote, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Knecht\Source\Repos\Webradio_MP2\libs\ParkSquare.Gracenote.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>C:\Users\dierk\Downloads\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="ParkSquare.Gracenote, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>C:\Users\dierk\Downloads\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Packages\ParkSquare.Gracenote.2.0.1\lib\netstandard2.0\ParkSquare.Gracenote.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="SkinEngine">
-      <HintPath>..\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\SkinEngine\bin\x86\Debug\SkinEngine.dll</HintPath>
+      <HintPath>C:\Users\dierk\Downloads\MediaPortal-2-FEAT_WiP2.2_Nereus\MediaPortal\Source\UI\SkinEngine\bin\x86\Debug\SkinEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
